# software-design-project

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
include/chess/: Bishop.h  Board.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  board.h
include/screen/: CreditsScreen.h  GameScreen.h  InstructionsScreen.h  MenuScreen.h  Screen.h  SettingsScreen.h  StatisticsScreen.h
res/: move_indicator.psd  pieces.psd
src/: Bishop.cpp  Board.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  board.cpp  main.cpp
src/chess/: Bishop.cpp  Board.cpp  King.cpp  Knight.cpp  Rook.cpp
src/screen/: GameScreen.cpp  MenuScreen.cpp  SettingsScreen.cpp
tests/: test_pawns.cpp  test_placeholder.cpp
